@@ -1,5 +1,8 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+        - Use ~ as prefix for plugins or action classes which are located in MyApp::Plugin / MyApp::Action 
+
+
 5.80005 2009-06-06 14:40:00
 
   Behaviour changes:
